diesel_derives/src/tests/snapshots/diesel_derives__tests__enum_rename_single (mariadb).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[derive(Enum)]\n#[derive(Debug, diesel::Enum)]\n#[diesel(sql_type = diesel::sql_types::Text)]\nenum Color {\n    #[diesel(rename = \"ReD\")]\n    Red,\n    #[diesel(rename = \"GreeN\")]\n    Green,\n    #[diesel(rename = \"BluE\")]\n    Blue,\n}\n"
---
const _: () = {
    use diesel;
    impl<__DB> diesel::deserialize::FromSql<diesel::sql_types::Text, __DB> for Color
    where
        __DB: diesel::backend::Backend,
        diesel::sql_types::Text: diesel::sql_types::EnumSqlType<false, __DB>,
        <diesel::sql_types::Text as diesel::sql_types::EnumSqlType<
            false,
            __DB,
        >>::Strategy: diesel::internal::derives::enum_::EnumMapping<__DB>,
    {
        fn from_sql(
            value: <__DB as diesel::backend::Backend>::RawValue<'_>,
        ) -> diesel::deserialize::Result<Self> {
            const VARIANTS: &[diesel::internal::derives::enum_::EnumVariant] = &[
                diesel::internal::derives::enum_::EnumVariant {
                    discriminant: 0i128,
                    rust_name: stringify!(Red),
                    sql_name: "ReD",
                },
                diesel::internal::derives::enum_::EnumVariant {
                    discriminant: 1i128,
                    rust_name: stringify!(Green),
                    sql_name: "GreeN",
                },
                diesel::internal::derives::enum_::EnumVariant {
                    discriminant: 2i128,
                    rust_name: stringify!(Blue),
                    sql_name: "BluE",
                },
            ];
            let idx = <<diesel::sql_types::Text as diesel::sql_types::EnumSqlType<
                false,
                __DB,
            >>::Strategy as diesel::internal::derives::enum_::EnumMapping<
                __DB,
            >>::map_from_database_value(value, stringify!(Color), VARIANTS)?;
            match idx {
                0usize => Ok(Self::Red),
                1usize => Ok(Self::Green),
                2usize => Ok(Self::Blue),
                _ => unreachable!("We construct all relevant variants"),
            }
        }
    }
    #[diagnostic::do_not_recommend]
    impl<
        __ST,
    > diesel::deserialize::FromSql<
        diesel::mariadb::returning::OldValueOf<__ST>,
        diesel::mariadb::Mariadb,
    > for Color
    where
        Self: diesel::deserialize::FromSql<__ST, diesel::mariadb::Mariadb>,
    {
        fn from_sql(
            value: <diesel::mariadb::Mariadb as diesel::backend::Backend>::RawValue<'_>,
        ) -> diesel::deserialize::Result<Self> {
            <Self as diesel::deserialize::FromSql<
                __ST,
                diesel::mariadb::Mariadb,
            >>::from_sql(value)
        }
    }
    impl<__DB> diesel::serialize::ToSql<diesel::sql_types::Text, __DB> for Color
    where
        __DB: diesel::backend::Backend,
        diesel::sql_types::Text: diesel::sql_types::EnumSqlType<false, __DB>,
        <diesel::sql_types::Text as diesel::sql_types::EnumSqlType<
            false,
            __DB,
        >>::Strategy: diesel::internal::derives::enum_::EnumMapping<__DB>,
    {
        fn to_sql<'b>(
            &'b self,
            output: &mut diesel::serialize::Output<'b, '_, __DB>,
        ) -> diesel::serialize::Result {
            let variant = match self {
                Self::Red => {
                    &diesel::internal::derives::enum_::EnumVariant {
                        discriminant: 0i128,
                        rust_name: stringify!(Red),
                        sql_name: "ReD",
                    }
                }
                Self::Green => {
                    &diesel::internal::derives::enum_::EnumVariant {
                        discriminant: 1i128,
                        rust_name: stringify!(Green),
                        sql_name: "GreeN",
                    }
                }
                Self::Blue => {
                    &diesel::internal::derives::enum_::EnumVariant {
                        discriminant: 2i128,
                        rust_name: stringify!(Blue),
                        sql_name: "BluE",
                    }
                }
            };
            <<diesel::sql_types::Text as diesel::sql_types::EnumSqlType<
                false,
                __DB,
            >>::Strategy as diesel::internal::derives::enum_::EnumMapping<
                __DB,
            >>::map_to_database_value(output, variant)
        }
    }
    impl<'__expr> diesel::expression::AsExpression<diesel::sql_types::Text>
    for &'__expr Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Text,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Text,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    #[diagnostic::do_not_recommend]
    impl<
        '__expr,
    > diesel::expression::AsExpression<
        diesel::sql_types::Nullable<diesel::sql_types::Text>,
    > for &'__expr Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    #[diagnostic::do_not_recommend]
    impl<'__expr, '__expr2> diesel::expression::AsExpression<diesel::sql_types::Text>
    for &'__expr2 &'__expr Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Text,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Text,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    #[diagnostic::do_not_recommend]
    impl<
        '__expr,
        '__expr2,
    > diesel::expression::AsExpression<
        diesel::sql_types::Nullable<diesel::sql_types::Text>,
    > for &'__expr2 &'__expr Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    impl<
        __DB,
    > diesel::serialize::ToSql<
        diesel::sql_types::Nullable<diesel::sql_types::Text>,
        __DB,
    > for Color
    where
        __DB: diesel::backend::Backend,
        Self: diesel::serialize::ToSql<diesel::sql_types::Text, __DB>,
    {
        fn to_sql<'__b>(
            &'__b self,
            out: &mut diesel::serialize::Output<'__b, '_, __DB>,
        ) -> diesel::serialize::Result {
            diesel::serialize::ToSql::<diesel::sql_types::Text, __DB>::to_sql(self, out)
        }
    }
    impl diesel::expression::AsExpression<diesel::sql_types::Text> for Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Text,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Text,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    impl diesel::expression::AsExpression<
        diesel::sql_types::Nullable<diesel::sql_types::Text>,
    > for Color {
        type Expression = diesel::internal::derives::as_expression::Bound<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
            Self,
        >;
        fn as_expression(
            self,
        ) -> <Self as diesel::expression::AsExpression<
            diesel::sql_types::Nullable<diesel::sql_types::Text>,
        >>::Expression {
            diesel::internal::derives::as_expression::Bound::new(self)
        }
    }
    impl<__DB, __ST> diesel::deserialize::Queryable<__ST, __DB> for Color
    where
        __DB: diesel::backend::Backend,
        __ST: diesel::sql_types::SingleValue,
        Self: diesel::deserialize::FromSql<__ST, __DB>,
    {
        type Row = Self;
        fn build(row: Self) -> diesel::deserialize::Result<Self> {
            diesel::deserialize::Result::Ok(row)
        }
    }
};
